--- a/project-alpha/package.json
+++ b/project-alpha/package.json
@@ -6,10 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "seed": "node -r dotenv/config ./script/seed.js",
     "lint": "next lint"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "@vercel/postgres": "^0.5.1",
+    "bcrypt": "^5.1.1",
     "clsx": "^2.1.0",
     "next": "14.2.1",
     "react": "^18",
@@ -19,6 +22,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "dotenv": "^16.3.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.1",
     "postcss": "^8",
