--- a/project-alpha/package.json
+++ b/project-alpha/package.json
@@ -15,10 +15,13 @@
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.0",
     "next": "14.2.1",
+    "next-auth": "^5.0.0-beta.18",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
