--- a/project-alpha/package.json
+++ b/project-alpha/package.json
@@ -14,10 +14,14 @@
     "@vercel/postgres": "^0.5.1",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "next": "14.2.1",
     "next-auth": "^5.0.0-beta.18",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.51.5",
+    "uuid": "^9.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -25,6 +29,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "dotenv": "^16.3.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.1",
