--- a/project-alpha/package.json
+++ b/project-alpha/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.5",
+    "use-debounce": "^10.0.1",
     "uuid": "^9.0.1",
     "zod": "^3.23.8"
   },
