--- a/project-alpha/package.json
+++ b/project-alpha/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
+    "fs": "^0.0.1-security",
     "next": "14.2.1",
     "next-auth": "^5.0.0-beta.18",
     "react": "^18",
