--- a/project-alpha/package.json
+++ b/project-alpha/package.json
@@ -16,8 +16,9 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
     "fs": "^0.0.1-security",
-    "next": "14.2.1",
+    "next": "^14.2.13",
     "next-auth": "^5.0.0-beta.18",
+    "perf_hooks": "^0.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
